--- a/wedding.html
+++ b/wedding.html
@@ -4,7 +4,7 @@
 	<title>Courntey and Robert James Wedding</title>
 	<meta charset="utf-8">
 	<meta content="width=device-width,initial-scale=1" name="viewport">
-	<meta content="Hey there, nice to meet you. I'm your website!" name="description">
+	<meta content="Courntey and Robert James upcoming wedding" name="description">
 	<meta content="" property="og:image">
 	<meta name="robots" content="noindex">
 
@@ -18,8 +18,9 @@
 		<!---->
 		<header class="header">
 			<div class="container-lrg">
-				<div class="flex col-12 spread">
-					<a class="logo primary-color launchaco-builder-hoverable logo" href="/">🇮🇪+ 🇺🇸+ ❤️= ⛪</a> <a class="menu-toggle" href="#main-menu" id="menu"><b class="nav-link mr0 secondary-color">☰</b></a>
+				<div class="flex col-12 text-center">
+					
+					<a class="menu-toggle" href="#main-menu" id="menu"><b class="nav-link mr0 secondary-color">☰</b></a>
 					<nav class="main-menu" id="main-menu" role="navigation">
 						<a class="menu-close" href="#" id="main-menu-close"><span class="bold">✕</span></a> <a class="nav-link secondary-color" href="/#cta-1">Details</a><a class="nav-link secondary-color" href="/#team-3">Couple</a><a class="nav-link secondary-color" href="/#faq-4">Questions</a><a class="nav-link secondary-color" href="/#cta-5">RSVP</a> <!---->
 						 <!---->
@@ -30,6 +31,8 @@
 		<section class="section">
 			<div class="container mb40">
 				<div class="col-12 text-center">
+					<div class=""><img alt="Screenshot of application" class="custom-img" src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png"></div>
+					
 					<h1 class="heading-lrg primary-color launchaco-builder-hoverable">Welcome to our wedding site</h1>
 					<h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Below you can find all the details you about our upcoming wedding.</h2>
 					<div class="mt40">
@@ -37,11 +40,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-lrg mt75">
-				<div class="col-12 launchaco-builder-hoverable">
-					<div class=""><img alt="Screenshot of application" class="custom-img" src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png"></div>
-				</div>
-			</div>
+	
 		</section>
 	</div>
 	<section class="section coral-white" id="cta-1">
@@ -148,7 +147,9 @@
 	<footer class="section text-center coral-accent" id="footer-6">
 		<div class="container col-12">
 			<nav class="mb50">
-				<a class="nav-link secondary-color" href="http://EEE" target="_blank">EEE</a><a class="nav-link secondary-color" href="" target="_blank">DDDDD</a><a class="nav-link secondary-color" href="" target="_blank">DDDDD</a><a class="nav-link secondary-color" href="" target="_blank">EKLK</a>
+				<a class="nav-link secondary-color" href="https://www.robertgabriel.ninja" target="_blank">Robert James website</a>
+				<a class="nav-link secondary-color" href="https://courtneymakesvideo.com" target="_blank">Courtneys' website</a>
+				<a class="nav-link secondary-color" href="https://lovetravelmoney.com/blog/" target="_blank">❤️ ✈️ 💵</a>
 			</nav>
 			<div>
 				<!---->
