--- a/wedding.html
+++ b/wedding.html
@@ -49,21 +49,22 @@
 
         <p class="paragraph secondary-color launchaco-builder-hoverable">
           890 Church St, <br> Mountain View, <br>CA 94041 <br> USA</p>
+        <div class="mt30 mb30">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101408.04840419095!2d-122.15130700697983!3d37.413439141539286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb7495bec0189%3A0x7c17d44a466baf9b!2sMountain+View%2C+CA!5e0!3m2!1sen!2sus!4v1558917523424!5m2!1sen!2sus"
           width="720" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-
+        </div>
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
 
-        <p class="paragraph secondary-color launchaco-builder-hoverable">
+        <p class="paragraph secondary-color launchaco-builder-hoverable mb30">
           29th of Feburay 2019
         </p>
 
 
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
 
-        <p class="paragraph secondary-color launchaco-builder-hoverable">
+        <p class="paragraph secondary-color launchaco-builder-hoverable mb30">
           TBA
         </p>
 
