--- a/wedding.html
+++ b/wedding.html
@@ -221,7 +221,7 @@
         <h4 class="heading-lrg primary-color launchaco-builder-hoverable">RSVP</h4>
         <iframe
           src="https://docs.google.com/forms/d/e/1FAIpQLSd11jw8oP52HEYVHCHypzm0qlnOd68is6tmzL2VtAj-79PSTA/viewform?embedded=true"
-          width="740" height="1000"></iframe>
+          width="740" height="1000"  frameborder="0" style="border:0"></iframe>
       </div>
     </div>
   </section>
