--- a/wedding.html
+++ b/wedding.html
@@ -47,7 +47,7 @@
 
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Location</b>
 
-        <p class="paragraph secondary-color launchaco-builder-hoverable">
+        <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
           890 Church St, <br> Mountain View, <br>CA 94041 <br> USA</p>
         <div class="mt30 mb30">
         <iframe
@@ -57,14 +57,14 @@
         </div>
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
 
-        <p class="paragraph secondary-color launchaco-builder-hoverable mb30">
+        <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           29th of Feburay 2019
         </p>
 
 
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
 
-        <p class="paragraph secondary-color launchaco-builder-hoverable mb30">
+        <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           TBA
         </p>
 
