--- a/wedding.html
+++ b/wedding.html
@@ -44,9 +44,9 @@
         <p class="paragraph mt20 secondary-color mt20 launchaco-builder-hoverable">Time, Date, locations and everything
           you need to know.</p>
 
-
-        <b class="bold primary-color launchaco-builder-hoverable  mt30">Location</b>
-
+  <span class=" mt30">
+        <b class="bold primary-color launchaco-builder-hoverable ">Location</b>
+        </span>
         <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
           890 Church St, <br> Mountain View, <br>CA 94041 <br> USA</p>
         <div class="mt30 mb30">
@@ -55,15 +55,16 @@
           width="720" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
         </div>
+          <span class=" mt30">
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
-
+        </span>
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           29th of Feburay 2019
         </p>
-
+  <span class=" mt30">
 
         <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
-
+        </span>
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           TBA
         </p>
