--- a/wedding.html
+++ b/wedding.html
@@ -39,38 +39,57 @@
   <section class="section coral-white" id="cta-1">
 
     <div class="container text-center">
+
       <div class="col-12">
         <h4 class="heading-lrg primary-color launchaco-builder-hoverable">Details</h4>
-        <p class="paragraph mt20 secondary-color mt20 launchaco-builder-hoverable">Time, Date, locations and everything
-          you need to know.</p>
+        <p class="paragraph mt20 secondary-color mt20 launchaco-builder-hoverable">
+          Time, Date, locations and everything
+          you need to know.
+        </p>
+      </div>
 
-  <span class=" mt30">
-        <b class="bold primary-color launchaco-builder-hoverable ">Location</b>
-        </span>
-        <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
-          890 Church St, <br> Mountain View, <br>CA 94041 <br> USA</p>
-        <div class="mt30 mb30">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101408.04840419095!2d-122.15130700697983!3d37.413439141539286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb7495bec0189%3A0x7c17d44a466baf9b!2sMountain+View%2C+CA!5e0!3m2!1sen!2sus!4v1558917523424!5m2!1sen!2sus"
-          width="720" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <div class="col-12">
+        <div class="col-6 mt50">
+          <span class=" mt30">
+            <b class="bold primary-color launchaco-builder-hoverable ">Location</b>
+          </span>
+          <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
+            890 Church St, <br> Mountain View, <br>CA 94041 <br> USA</p>
 
         </div>
+        <div class="col-6 mt50">
+          <div class="mt30 mb30">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101408.04840419095!2d-122.15130700697983!3d37.413439141539286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb7495bec0189%3A0x7c17d44a466baf9b!2sMountain+View%2C+CA!5e0!3m2!1sen!2sus!4v1558917523424!5m2!1sen!2sus"
+              width="720" height="450" frameborder="0" style="border:0" allowfullscreen>
+            </iframe>
+          </div>
+
+
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="col-6">
           <span class=" mt30">
-        <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
-        </span>
-        <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
-          29th of Feburay 2019
-        </p>
-  <span class=" mt30">
+            <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
+          </span>
+          <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
+            29th of Feburay 2019
+          </p>
+        </div>
 
-        <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
-        </span>
-        <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
-          TBA
-        </p>
+        <div class="col-6">
+          <span class=" mt30">
 
+            <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
+          </span>
+          <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
+            TBA
+          </p>
+        </div>
       </div>
     </div>
+
   </section>
   <section class="section coral-white" id="team-2">
     <div class="container text-center mb35">
@@ -176,7 +195,8 @@
     <div class="container">
       <div class="col-12 mt40">
         <div class="faq pad20">
-          <b class="bold primary-color launchaco-builder-hoverable">Where would you recommend  I book my accoumention?</b>
+          <b class="bold primary-color launchaco-builder-hoverable">Where would you recommend I book my
+            accoumention?</b>
           <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
             adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris</p>
@@ -195,23 +215,26 @@
         </div>
         <div class="faq pad20">
           <b class="bold primary-color launchaco-builder-hoverable">Do you have a wedding registry<b>
-          <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris</p>
+              <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam,
+                quis nostrud exercitation ullamco laboris</p>
         </div>
         <div class="faq pad20">
           <b class="bold primary-color launchaco-builder-hoverable">What else to do in San Fransico<b>
-          <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris</p>
+              <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam,
+                quis nostrud exercitation ullamco laboris</p>
         </div>
         <div class="faq pad20">
           <b class="bold primary-color launchaco-builder-hoverable">Anything else you recommend?<b>
-          <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris</p>
+              <p class="paragraph secondary-color launchaco-builder-hoverable">"Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam,
+                quis nostrud exercitation ullamco laboris</p>
         </div>
-         
+
       </div>
     </div>
   </section>
@@ -220,11 +243,11 @@
     <div class="container text-center">
       <div class="col-12">
         <h4 class="heading-lrg primary-color launchaco-builder-hoverable">RSVP</h4>
-        
+
         <div class="mt40">
-        <iframe
-          src="https://docs.google.com/forms/d/e/1FAIpQLSd11jw8oP52HEYVHCHypzm0qlnOd68is6tmzL2VtAj-79PSTA/viewform?embedded=true"
-          width="740" height="1000"  frameborder="0" style="border:0"></iframe>
+          <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSd11jw8oP52HEYVHCHypzm0qlnOd68is6tmzL2VtAj-79PSTA/viewform?embedded=true"
+            width="740" height="1000" frameborder="0" style="border:0"></iframe>
         </div>
       </div>
     </div>
