--- a/wedding.html
+++ b/wedding.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="font-friendly">
-  <div class="coral-flat">
+  <div class="coral-flat" style="background-color: brown;background-image: url(https://www.transparenttextures.com/patterns/skulls.png);">
     <section class="section">
       <div class="container mb40">
         <div class="col-12 text-center">
