--- a/wedding.html
+++ b/wedding.html
@@ -8,14 +8,16 @@
   <meta content="Courntey and Robert James upcoming wedding" name="description">
   <meta content="" property="og:image">
   <meta name="robots" content="noindex">
-  <link href="http://www.iconarchive.com/download/i66645/designbolts/free-valentine-heart/Heart.ico" rel="shortcut icon">
+  <link href="http://www.iconarchive.com/download/i66645/designbolts/free-valentine-heart/Heart.ico"
+    rel="shortcut icon">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link href="https://www.launchaco.com/static/AllTemplates.min.css" rel="stylesheet">
 
 </head>
 
 <body class="font-friendly">
-  <div class="coral-flat" style="background-color: brown;background-image: url(https://www.transparenttextures.com/patterns/skulls.png);">
+  <div class="coral-flat"
+    style="background-color: brown;background-image: url(https://www.transparenttextures.com/patterns/skulls.png);">
     <section class="section">
       <div class="container mb40">
         <div class="col-12 text-center">
@@ -26,9 +28,7 @@
           <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Below you can find all the details you
             about our upcoming wedding.</h2>
           <div class="mt40">
-            <a class="button mobile-text-center mt10 launchaco-builder-hoverable mr10 mobile-text-center accent-bg primary-color"
-              href="" target="_blank"><span>RSVP</span></a> <a
-              class="button mobile-text-center mt10 launchaco-builder-hoverable" href=""
+            <a class="button mobile-text-center mt10 launchaco-builder-hoverable" href=""
               target="_blank"><span>Engagement video</span></a>
           </div>
         </div>
@@ -49,48 +49,33 @@
       </div>
 
       <div class="col-12">
-        <div class="col-6 mt50">
-          <span class=" mt30">
-            <b class="bold primary-color launchaco-builder-hoverable ">Location</b>
-          </span>
-          <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
-            890 Church St, <br> Mountain View, <br>CA 94041 <br> USA</p>
 
+
+        <div class="mt30 mb30">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101408.04840419095!2d-122.15130700697983!3d37.413439141539286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb7495bec0189%3A0x7c17d44a466baf9b!2sMountain+View%2C+CA!5e0!3m2!1sen!2sus!4v1558917523424!5m2!1sen!2sus"
+            width="720" height="450" frameborder="0" style="border:0" allowfullscreen>
+          </iframe>
         </div>
-        <div class="col-6 mt50">
-          <div class="mt30 mb30">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101408.04840419095!2d-122.15130700697983!3d37.413439141539286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb7495bec0189%3A0x7c17d44a466baf9b!2sMountain+View%2C+CA!5e0!3m2!1sen!2sus!4v1558917523424!5m2!1sen!2sus"
-              width="720" height="450" frameborder="0" style="border:0" allowfullscreen>
-            </iframe>
-          </div>
+        <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
+          <b class="bold primary-color launchaco-builder-hoverable ">Location: </b>
+          890 Church St, Mountain View, CA 94041 USA
+        </p>
 
+        <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
+          <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
+          29th of Feburay 2019
+        </p>
 
-        </div>
-      </div>
-      <div class="col-12">
-        <div class="col-6">
-          <span class=" mt30">
-            <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
-          </span>
-          <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
-            29th of Feburay 2019
-          </p>
-        </div>
-
-        <div class="col-6">
-          <span class=" mt30">
-
-            <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
-          </span>
-          <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
-            TBA
-          </p>
-        </div>
+        <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
+          <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
+          TBA
+        </p>
       </div>
     </div>
-
   </section>
+
+  
   <section class="section coral-white" id="team-2">
     <div class="container text-center mb35">
       <h3 class="heading primary-color launchaco-builder-hoverable">The Couple</h3>
