--- a/wedding.html
+++ b/wedding.html
@@ -57,25 +57,27 @@
             width="720" height="450" frameborder="0" style="border:0" allowfullscreen>
           </iframe>
         </div>
+      </div>
+      <div class="col-12">
         <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
           <b class="bold primary-color launchaco-builder-hoverable ">Location: </b>
           890 Church St, Mountain View, CA 94041 USA
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
-          <b class="bold primary-color launchaco-builder-hoverable  mt30">Date</b>
+          <b class="bold primary-color launchaco-builder-hoverable  mt30">Date: </b>
           29th of Feburay 2019
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
-          <b class="bold primary-color launchaco-builder-hoverable  mt30">Time</b>
+          <b class="bold primary-color launchaco-builder-hoverable  mt30">Time: </b>
           TBA
         </p>
       </div>
     </div>
   </section>
 
-  
+
   <section class="section coral-white" id="team-2">
     <div class="container text-center mb35">
       <h3 class="heading primary-color launchaco-builder-hoverable">The Couple</h3>
