--- a/wedding.html
+++ b/wedding.html
@@ -66,7 +66,7 @@
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           <b class="bold primary-color launchaco-builder-hoverable  mt30">Date: </b>
-          29th of Feburay 2019
+          TBA
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
@@ -93,9 +93,9 @@
           <div>
             <b class="bold primary-color">Robert James</b>
             <p class="paragraph primary-color mt10">Designer</p>
-            <p class="paragraph secondary-color mt20">He comes from the non-acting branch of the Coppola family: his
-              father August (brother of Francis) is a comparative literature professor and his mother, Joy, a former
-              dancer.</p>
+            <p class="paragraph secondary-color mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris.</p>
           </div>
 
         </div>
@@ -108,9 +108,9 @@
           <div>
             <b class="bold primary-color">Courntey Hood</b>
             <p class="paragraph primary-color mt10">Designer</p>
-            <p class="paragraph secondary-color mt20">He comes from the non-acting branch of the Coppola family: his
-              father August (brother of Francis) is a comparative literature professor and his mother, Joy, a former
-              dancer.</p>
+            <p class="paragraph secondary-color mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris.</p>
           </div>
 
         </div>
@@ -121,8 +121,8 @@
     <div class="container text-center mb75">
       <div class="col-12">
         <h3 class="heading primary-color launchaco-builder-hoverable">Checklist</h3>
-        <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Be if you're traveling from Ireland or
-          traveling from the USA, make sure you have everything in check.</p>
+        <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit, sed do eiusmod tempor incididunt ut l.</p>
       </div>
     </div>
     <div class="container flex">
@@ -230,6 +230,9 @@
     <div class="container text-center">
       <div class="col-12">
         <h4 class="heading-lrg primary-color launchaco-builder-hoverable">RSVP</h4>
+        <p class="paragraph mt20 secondary-color mt20 launchaco-builder-hoverable">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+        </p>
 
         <div class="mt40">
           <iframe
