--- a/wedding.html
+++ b/wedding.html
@@ -61,7 +61,7 @@
       <div class="col-12">
         <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
           <b class="bold primary-color launchaco-builder-hoverable ">Location: </b>
-          890 Church St, Mountain View, CA 94041 USA
+          TBA
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
@@ -92,7 +92,7 @@
           </div>
           <div>
             <b class="bold primary-color">Robert James</b>
-            <p class="paragraph primary-color mt10">Designer</p>
+            <p class="paragraph primary-color mt10">Groom</p>
             <p class="paragraph secondary-color mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
               exercitation ullamco laboris.</p>
@@ -107,7 +107,7 @@
           </div>
           <div>
             <b class="bold primary-color">Courntey Hood</b>
-            <p class="paragraph primary-color mt10">Designer</p>
+            <p class="paragraph primary-color mt10">Bride</p>
             <p class="paragraph secondary-color mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
               exercitation ullamco laboris.</p>
