--- a/wedding.html
+++ b/wedding.html
@@ -43,8 +43,7 @@
       <div class="col-12">
         <h4 class="heading-lrg primary-color launchaco-builder-hoverable">Details</h4>
         <p class="paragraph mt20 secondary-color mt20 launchaco-builder-hoverable">
-          Time, Date, locations and everything
-          you need to know.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
         </p>
       </div>
 
@@ -82,7 +81,7 @@
     <div class="container text-center mb35">
       <h3 class="heading primary-color launchaco-builder-hoverable">The Couple</h3>
       <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt,</p>
+        adipiscing elit, sed do eiusmod tempor incididunt.</p>
     </div>
     <div class="container flex wrap text-center">
       <div class="col-6 mt40 flex launchaco-builder-hoverable">
