--- a/wedding.html
+++ b/wedding.html
@@ -24,9 +24,8 @@
           <div class=""><img alt="Screenshot of application" class="custom-img"
               src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png"></div>
 
-          <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Welcome to our wedding site</h1>
-          <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Below you can find all the details you
-            about our upcoming wedding.</h2>
+          <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Robert & Courtneys  Wedding</h1>
+          <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</h2>
           <div class="mt40">
             <a class="button mobile-text-center mt10 launchaco-builder-hoverable" href=""
               target="_blank"><span>Engagement video</span></a>
