--- a/wedding.html
+++ b/wedding.html
@@ -26,6 +26,7 @@
 
           <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Robert & Courtneys  Wedding</h1>
           <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</h2>
+          <h2 id="demo" class="subheading secondary-color mt20 launchaco-builder-hoverable"></h2>
           <div class="mt40">
             <a class="button mobile-text-center mt10 launchaco-builder-hoverable" href=""
               target="_blank"><span>Engagement video</span></a>
@@ -253,6 +254,37 @@
       </div>
     </div>
   </footer>
+          
+          <script>
+// Set the date we're counting down to
+var countDownDate = new Date("Feb 29, 2020 13:30:30").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s until the wedding";
+
+  // If the count down is finished, write some text 
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
 </body>
 
 </html>
