--- a/wedding.html
+++ b/wedding.html
@@ -275,8 +275,8 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s until the wedding";
+  document.getElementById("demo").innerHTML = days + " days " + hours + "hours "
+  + minutes + "mminutes and " + seconds + "seconds until the wedding";
 
   // If the count down is finished, write some text 
   if (distance < 0) {
