--- a/wedding.html
+++ b/wedding.html
@@ -60,17 +60,17 @@
       <div class="col-12">
         <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
           <b class="bold primary-color launchaco-builder-hoverable ">Location: </b>
-          TBA
+          The Crawford, Cork City
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           <b class="bold primary-color launchaco-builder-hoverable  mt30">Date: </b>
-          TBA
+          Saturday, February 29, 2019
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           <b class="bold primary-color launchaco-builder-hoverable  mt30">Time: </b>
-          TBA
+          3pm til Late 
         </p>
       </div>
     </div>
@@ -275,8 +275,8 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + " days " + hours + "hours "
-  + minutes + "mminutes and " + seconds + "seconds until the wedding";
+  document.getElementById("demo").innerHTML = days + " days " + hours + " hours "
+  + minutes + " minutes and " + seconds + " seconds until the wedding";
 
   // If the count down is finished, write some text 
   if (distance < 0) {
