--- a/wedding.html
+++ b/wedding.html
@@ -90,9 +90,7 @@
           <div>
             <b class="bold primary-color">Robert James</b>
             <p class="paragraph primary-color mt10">Groom</p>
-            <p class="paragraph secondary-color mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-              exercitation ullamco laboris.</p>
+            <p class="paragraph secondary-color mt20">Sexy, Gorgeous, and Humble. Robert James works as software developer while traveling the world with the amazing Courtney. Born in Ireland and has had visa/lived for Canada, USA,Poland, France, Greece, Spain, Budapest.</p>
           </div>
 
         </div>
