--- a/wedding.html
+++ b/wedding.html
@@ -8,7 +8,7 @@
   <meta content="Courntey and Robert James upcoming wedding" name="description">
   <meta content="" property="og:image">
   <meta name="robots" content="noindex">
-  <link href="http://www.iconarchive.com/download/i66645/designbolts/free-valentine-heart/Heart.ico"
+  <link href="https://www.iconarchive.com/download/i66645/designbolts/free-valentine-heart/Heart.ico"
     rel="shortcut icon">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
   <link href="https://www.launchaco.com/static/AllTemplates.min.css" rel="stylesheet">
