--- a/wedding.html
+++ b/wedding.html
@@ -17,7 +17,7 @@
 
 <body class="font-friendly">
   <div class="coral-flat"
-    style="background-color: brown;background-image: url(https://www.transparenttextures.com/patterns/skulls.png);">
+    style="background-image: url("https://www.transparenttextures.com/patterns/food.png"); background-color: rgb(255, 255, 255);">
     <section class="section">
       <div class="container mb40">
         <div class="col-12 text-center">
