--- a/wedding.html
+++ b/wedding.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Courntey and Robert James Wedding</title>
+  <title>Courtney's and Robert James Wedding</title>
   <meta charset="utf-8">
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="Courntey and Robert James upcoming wedding" name="description">
@@ -90,7 +90,7 @@
           <div>
             <b class="bold primary-color">Robert James</b>
             <p class="paragraph primary-color mt10">Groom</p>
-            <p class="paragraph secondary-color mt20">Sexy, Gorgeous, and Humble. Robert James works as software developer while traveling the world with the amazing Courtney. Born in Ireland and has had visa/lived for Canada, USA,Poland, France, Greece, Spain, Budapest.</p>
+            <p class="paragraph secondary-color mt20">Sexy, gorgeous and humble. Robert James works as a software engineer while traveling the world with the amazing Courtney. Born and raised in Ireland. Robert is passionate and strives to make the world wide web more friendly for all! Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg off with his Irish gift-of-the-gab if you give him half a chance.</p>
           </div>
 
         </div>
@@ -101,11 +101,9 @@
             style="background-image: url(&quot;https://cdn.launchaco.com/images/f2a878fe-18ab-4e41-9e9d-d37351d04862.png&quot;);">
           </div>
           <div>
-            <b class="bold primary-color">Courntey Hood</b>
+            <b class="bold primary-color">Courtney Hood</b>
             <p class="paragraph primary-color mt10">Bride</p>
-            <p class="paragraph secondary-color mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-              exercitation ullamco laboris.</p>
+            <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who fell in love with this cute Irish guy named Rob. She's an avid photographer and always bugging Rob to pose for photos. Her favorite book is Ella Enchanted and Disney needs to hire her to remake that piece-of-trash movie version with Anne Hathaway. She would not be against anyone making a Change.Org petition to help her cause. But in seriousness, her goal is to see as much of this big, wild world as possible and is extremely happy to have found not only a travel partner but a life partner along the way.</p>
           </div>
 
         </div>
