--- a/wedding.html
+++ b/wedding.html
@@ -51,14 +51,13 @@
 
 
         <div class="mt30 mb30">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4923.998661442637!2d-8.48704437193595!3d51.89747631880437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4844901034abc5af%3A0x5d4217a9aeda751b!2sCrawford+Art+Gallery!5e0!3m2!1sen!2sca!4v1563762476698!5m2!1sen!2sca" width="720" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </iframe>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.8821922620855!2d-8.480933048693059!3d51.89961397960187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48449016d0d2eef5%3A0x92084379af32847!2sSt.+Peter&#39;s+Cork!5e0!3m2!1sen!2sca!4v1564604848710!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
       <div class="col-12">
         <p class="paragraph secondary-color launchaco-builder-hoverable mt20">
           <b class="bold primary-color launchaco-builder-hoverable ">Location: </b>
-          The Crawford, Cork City
+          St Peters, N Main St, Centre, Cork, Ireland
         </p>
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
@@ -68,7 +67,7 @@
 
         <p class="paragraph secondary-color launchaco-builder-hoverable mb30 mt20">
           <b class="bold primary-color launchaco-builder-hoverable  mt30">Time: </b>
-          3pm til Late 
+          3pm til Late 🎉
         </p>
       </div>
     </div>
@@ -78,14 +77,13 @@
   <section class="section coral-white" id="team-2">
     <div class="container text-center mb35">
       <h3 class="heading primary-color launchaco-builder-hoverable">The Couple</h3>
-      <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt.</p>
+
     </div>
     <div class="container flex wrap text-center">
       <div class="col-6 mt40 flex launchaco-builder-hoverable">
         <div class="team-card flex flex-column center-vertical center-horizontal w100">
           <div class="user-image mb20"
-            style="background-image: url(&quot;https://cdn.launchaco.com/images/2f268123-7ba1-48ab-bf84-979d684908b4.png&quot;);">
+            style="background-image: url('https://cdn.launchaco.com/images/2f268123-7ba1-48ab-bf84-979d684908b4.png');">
           </div>
           <div>
             <b class="bold primary-color">Robert James</b>
@@ -98,7 +96,7 @@
       <div class="col-6 mt40 flex launchaco-builder-hoverable">
         <div class="team-card flex flex-column center-vertical center-horizontal w100">
           <div class="user-image mb20"
-            style="background-image: url(&quot;https://cdn.launchaco.com/images/f2a878fe-18ab-4e41-9e9d-d37351d04862.png&quot;);">
+            style="background-image: url('https://cdn.launchaco.com/images/f2a878fe-18ab-4e41-9e9d-d37351d04862.png');">
           </div>
           <div>
             <b class="bold primary-color">Courtney Hood</b>
