--- a/wedding.html
+++ b/wedding.html
@@ -99,7 +99,7 @@
                             software engineer while traveling the world with the amazing Courtney. Born and raised in
                             Ireland. Robert is passionate and strives to make the world wide web more friendly for all!
                             Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg
-                            off with his Irish gift-of-the-gab if you give him half a chance.</p>
+                            off with his Irish gift-of-the-gab if you give him half a chance. Robert once broke his noise in his sleep, fun fact. He has also lived in Canada, USA, Germeny, Poland, Greece, Hungery and England.</p>
                     </div>
 
                 </div>
