--- a/wedding.html
+++ b/wedding.html
@@ -17,7 +17,7 @@
 
 <body class="font-friendly">
     <div class="coral-flat"
-        style="background-image: url('https://www.transparenttextures.com/patterns/food.png'); background-color: #f0f2f3;">
+        style="background-image: url('https://www.transparenttextures.com/patterns/food.png'); background-color: #000000;">
         <section class="section">
             <div class="container mb40">
                 <div class="col-12 text-center">
@@ -28,8 +28,14 @@
 
                     <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Courtney's and Robert James
                         Wedding</h1>
-                    <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"> Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod</h2>
+                    <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Come party with us!
+                    </h2>
+                    <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"></h2>
+                            We are excited to invite you to join us as we begin building our new future together.
+                </div>
+                            Each one of you plays a unique role in our lives, sharing with us memories we will always treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we exchange vows and make a lasting commitment to one another.
+                            <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"> 
+                            Kindly fill out the RSVP below by December 31st.</h2>
                     <h2 id="demo" class="subheading secondary-color mt20 launchaco-builder-hoverable"></h2>
                     <div class="mt40">
                         <a class="button mobile-text-center mt10 launchaco-builder-hoverable"
@@ -47,9 +53,6 @@
 
             <div class="col-12">
                 <h4 class="heading-lrg primary-color launchaco-builder-hoverable">Details</h4>
-                <p class="paragraph mt20 secondary-color mt20 launchaco-builder-hoverable">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-                </p>
             </div>
 
             <div class="col-12">
@@ -83,8 +86,8 @@
 
     <section class="section coral-white" id="team-2">
         <div class="container text-center mb35">
-            <h3 class="heading primary-color launchaco-builder-hoverable">The Couple</h3>
-
+            <h3 class="heading primary-color launchaco-builder-hoverable">Our Story</h3>
+            <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and Courtney met while both being guests at the same co-living hub on Airbnb. The intrepid travelers hit it off while attending an art show that also served pancakes with some of the other residents at their shared Airbnb and the rest was history.</p>
         </div>
         <div class="container flex wrap text-center">
             <div class="col-6 mt40 flex launchaco-builder-hoverable">
@@ -99,7 +102,7 @@
                             software engineer while traveling the world with the amazing Courtney. Born and raised in
                             Ireland. Robert is passionate and strives to make the world wide web more friendly for all!
                             Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg
-                            off with his Irish gift-of-the-gab if you give him half a chance. Robert once broke his noise in his sleep, fun fact. He has also lived in Canada, USA, Germeny, Poland, Greece, Hungery and England.</p>
+                            off with his Irish gift-of-the-gab if you give him half a chance.</p>
                     </div>
 
                 </div>
