--- a/wedding.html
+++ b/wedding.html
@@ -17,7 +17,7 @@
 
 <body class="font-friendly">
     <div class="coral-flat"
-        style="background-image: url('https://www.transparenttextures.com/patterns/food.png'); background-color: #000000;">
+        style="background-color: #fff; color:black">
         <section class="section">
             <div class="container mb40">
                 <div class="col-12 text-center">
