--- a/wedding.html
+++ b/wedding.html
@@ -28,15 +28,17 @@
 
                     <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Courtney's and Robert James
                         Wedding</h1>
-                    <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable">Come party with us!
+                    <h2 class="subheading  mt20 launchaco-builder-hoverable">Come party with us!
                     </h2>
-                    <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"></h2>
+                    <h2 class="subheading mt20 launchaco-builder-hoverable">
                             We are excited to invite you to join us as we begin building our new future together.
-                </div>
+                        </h2>
+                        <h2 class="subheading  mt20 launchaco-builder-hoverable">
                             Each one of you plays a unique role in our lives, sharing with us memories we will always treasure. So we hope you can join us in Cork for yet another unforgettable moment, as we exchange vows and make a lasting commitment to one another.
-                            <h2 class="subheading secondary-color mt20 launchaco-builder-hoverable"> 
+                        </h2>
+                            <h2 class="subheading  mt20 launchaco-builder-hoverable"> 
                             Kindly fill out the RSVP below by December 31st.</h2>
-                    <h2 id="demo" class="subheading secondary-color mt20 launchaco-builder-hoverable"></h2>
+                    <h2 id="demo" class="subheading  mt20 launchaco-builder-hoverable"></h2>
                     <div class="mt40">
                         <a class="button mobile-text-center mt10 launchaco-builder-hoverable"
                             href="https://www.youtube.com/watch?v=Eqf8oV-6CVw&feature=youtu.be"
