--- a/wedding.html
+++ b/wedding.html
@@ -26,7 +26,7 @@
                             src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png">
                     </div>
 
-                    <h1 class="heading-lrg primary-color launchaco-builder-hoverable">Courtney's and Robert James
+                    <h1 class="heading-lrg  launchaco-builder-hoverable">Courtney's and Robert James
                         Wedding</h1>
                     <h2 class="subheading  mt20 launchaco-builder-hoverable">Come party with us!
                     </h2>
