--- a/wedding.html
+++ b/wedding.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Courtney's and Robert James Wedding</title>
+    <title>Leaping Into Love with Courtney & Robert James</title>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <meta content="Courntey and Robert James upcoming wedding" name="description">
+    <meta content="Leaping into Love with Courtney & Robert James" name="description">
     <meta content="" property="og:image">
     <meta name="robots" content="noindex">
     <link href="https://www.iconarchive.com/download/i66645/designbolts/free-valentine-heart/Heart.ico"
@@ -22,11 +22,8 @@
             <div class="container mb40">
                 <div class="col-12 text-center">
                     <div>
-                        <img alt="Screenshot of application" class="custom-img"
-                            src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png">
-                    </div>
 
-                    <h1 class="heading-lrg  launchaco-builder-hoverable">Courtney's and Robert James
+                    <h1 class="heading-lrg  launchaco-builder-hoverable">Courtney and Robert James'
                         Wedding</h1>
                     <h2 class="subheading  mt20 launchaco-builder-hoverable">Come party with us!
                     </h2>
@@ -94,6 +91,11 @@
         <div class="container flex wrap text-center">
             <div class="col-6 mt40 flex launchaco-builder-hoverable">
                 <div class="team-card flex flex-column center-vertical center-horizontal w100">
+                    
+                     <img alt="Screenshot of application" class="custom-img"
+                            src="https://cdn.launchaco.com/images/8f526fc1-523f-4f0e-ab43-0d8e5d5605ca.png">
+                    </div>
+                    
                     <div class="user-image mb20"
                         style="background-image: url('https://cdn.launchaco.com/images/2f268123-7ba1-48ab-bf84-979d684908b4.png');">
                     </div>
