--- a/wedding.html
+++ b/wedding.html
@@ -119,12 +119,11 @@
                     <div>
                         <b class="bold primary-color">Courtney Hood</b>
                         <p class="paragraph primary-color mt10">Bride</p>
-                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who fell in love
-                            with this cute Irish guy named Rob. She's an avid photographer and always bugging Rob to
+                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond and an avid photographer who's always bugging Rob to
                             pose for photos. Her favorite book is Ella Enchanted and Disney needs to hire her to remake
                             that piece-of-trash movie version with Anne Hathaway. She would not be against anyone making
-                            a Change.Org petition to help her cause. But in seriousness, her goal is to see as much of
-                            this big, wild world as possible and is extremely happy to have found not only a travel
+                            a Change.Org petition to help her cause. But in all seriousness, her goal is to see as much of
+                            this wild world as possible and is extremely happy to have found not only a travel
                             partner but a life partner along the way.</p>
                     </div>
 
