--- a/wedding.html
+++ b/wedding.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>#LeapingIntoLove with Courtney & Robert</title>
+    <title>#LeapingIntoLove | Courtney & Robert</title>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <meta content="Leaping into Love with Courtney & Robert James" name="description">
+    <meta content="LeapingIntoLove with Courtney & Robert James" name="description">
     <meta content="" property="og:image">
     <meta name="robots" content="noindex">
     <link href="https://www.iconarchive.com/download/i66645/designbolts/free-valentine-heart/Heart.ico"
