--- a/wedding.html
+++ b/wedding.html
@@ -218,11 +218,11 @@
     <footer class="section text-center coral-accent" id="footer-6">
         <div class="container col-12">
             <nav class="mb50">
-                <a class="nav-link secondary-color" href="https://www.robertgabriel.ninja" target="_blank">Robert James
+                <a class="nav-link secondary-color" href="https://www.robertgabriel.ninja" target="_blank">Robert James'
                     website</a>
                 <a class="nav-link secondary-color" href="https://lovetravelmoney.com/blog/" target="_blank">❤️ ✈️
                     💵</a>
-                <a class="nav-link secondary-color" href="https://courtneymakesvideo.com" target="_blank">Courtneys'
+                <a class="nav-link secondary-color" href="https://courtneymakesvideo.com" target="_blank">Courtney's
                     website</a>
             </nav>
             <div class="mt50">
