--- a/wedding.html
+++ b/wedding.html
@@ -119,8 +119,7 @@
                     <div>
                         <b class="bold primary-color">Courtney Hood</b>
                         <p class="paragraph primary-color mt10">Bride</p>
-                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond and an avid photographer who's always bugging Rob to
-                            pose for photos. Her favorite book is Ella Enchanted and Disney needs to hire her to remake
+                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite book is Ella Enchanted and Disney needs to hire her to remake
                             that piece-of-trash movie version with Anne Hathaway. She would not be against anyone making
                             a Change.Org petition to help her cause. But in all seriousness, her goal is to see as much of
                             this wild world as possible and is extremely happy to have found not only a travel
