--- a/wedding.html
+++ b/wedding.html
@@ -104,7 +104,7 @@
                         <p class="paragraph primary-color mt10">Groom</p>
                         <p class="paragraph secondary-color mt20">Sexy, gorgeous and humble. Robert James works as a
                             software engineer while traveling the world with the amazing Courtney. Born and raised in
-                            Ireland. Robert is passionate and strives to make the world wide web more friendly for all!
+                            Ireland, Robert is passionate and strives to make the world wide web friendlier for all!
                             Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg
                             off with his Irish gift-of-the-gab if you give him half a chance.</p>
                     </div>
@@ -119,11 +119,11 @@
                     <div>
                         <b class="bold primary-color">Courtney Hood</b>
                         <p class="paragraph primary-color mt10">Bride</p>
-                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite book is Ella Enchanted and Disney needs to hire her to remake
+                        <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite book is Ella Enchanted and thinks Disney needs to hire her to remake
                             that piece-of-trash movie version with Anne Hathaway. She would not be against anyone making
                             a Change.Org petition to help her cause. But in all seriousness, her goal is to see as much of
-                            this wild world as possible and is extremely happy to have found not only a travel
-                            partner but a life partner along the way.</p>
+                            this wild world as possible and is extremely happy to have found, not only a travel
+                            partner, but a life partner along the way.</p>
                     </div>
 
                 </div>
